--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.5.27",
+    "@types/node": "^12.7.11",
+    "@types/validator": "^10.11.3",
     "express": "^4.17.1",
     "mariadb": "^2.1.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.19.3",
-    "@types/node": "^12.7.11",
-    "@types/validator": "^10.11.3",
-    "@types/bluebird": "^3.5.27"
+    "sequelize": "^5.19.3"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
